Avoiding using deprecated new Integer in org.eclipse.osgi.compatibility.state
Change-Id: I7e7f5fe5fa545ceaf596084591a7f758f90e4420
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>